hphp/test/quick/lsb_static_redeclare5.php.expectf

Fatal error: Cannot redeclare LSB static A::x as C::x in %s on line 10
